fix(footer): spacing

--- a/client/app/components/footer/footer.scss
+++ b/client/app/components/footer/footer.scss
@@ -16,9 +16,10 @@ img {
 }
 
  footer a {
-	color: $shy-orange; // $shy-orange (should be)
+	margin-right: 15px;
+	color: $shy-lavender;
 }
 
 footer a:hover {
-	color: #fff;
+	color: $shy-orange;
 }
